# epic-adb

./: .gitignore  README.md  main.py  pyproject.toml
docs/: commands.md
src/api/: __init__.py  routes.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  commands.py
src/helpers/: date_utils.py  logger.py  network.py  responses.py
src/providers/: __init__.py  adb.py
src/schema/: __init__.py  models.py
src/services/: __init__.py  device.py  dns.py  profile.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: __init__.py  test_adb_commands.py  test_app.py  test_config.py
